imvirt (0.9.5) unstable; urgency=low

  * Add imvirt-report manpage from Debian,
     thanks to Patrick Matthäi <pmatthaei@debian.org>.
  * Move source from SourceForge SVN to github,
    cleanup svn:keywords usage.
  * Update perl/Makefile.PL (require File::Which).
  * LXC: Remove inapplicable /proc from procfs_read() parameter
    (reported by Thorsten Lüttgert <t.luettgert@enda.eu>).
  * KVM: Don't count dmesg line twice
    (reported by Thorsten Lüttgert <t.luettgert@enda.eu>).

 -- Thomas Liske <liske@ibh.de>  

imvirt (0.9.4) unstable; urgency=low

  * Fix some FTBFS due gcc 4.7
    (reported by Patrick Matthäi <pmatthaei@debian.org>).
  * Fix pod2man error (ImVirt.pm)
    (reported by Patrick Matthäi <pmatthaei@debian.org>).
  * Fix wrong use statement in LXC.pm
    (reported by Miroslav Suchý <msuchy@redhat.com>).
  * Fix /proc/modules interpretation
    (reported by Miroslav Suchý <msuchy@redhat.com>).
  * Use mktemp instead of tempfile (debianutils) in imvirt-report
    (reported by Miroslav Suchý <msuchy@redhat.com>).

 -- Thomas Liske <liske@ibh.de>  Thu, 17 May 2012 20:32:04 +0200

imvirt (0.9.3) unstable; urgency=low

  * Add ARAnyM detection support.
  * Add LXC detection support.
  * Reduce perl warnings.
  * Use File::Which if available (no shell used to execute binaries).
  * Take only used virtio kernel modules into account.
  * Improve imvirt.spec.in (thanks to Miroslav Suchý <msuchy@redhat.com>).
  * Don't call lspci unless /proc/bus/pci is available.
  * Add imvirt-report binary.

 -- Thomas Liske <liske@ibh.de>  Mon, 14 May 2012 19:16:57 +0200

imvirt (0.9.2) unstable; urgency=low

  * Improve overall detection.
  * Improve debug output.
  * Add INSTALLDIRS=vendor to be conform to the Debian perl policy.
    (Debian Bug #578798 by Niko Tyni <ntyni@debian.org>)
  * Update to automake 1.11.1.

 -- Thomas Liske <liske@ibh.de>  Sat, 04 Feb 2012 17:52:45 +0100

imvirt (0.9.1) unstable; urgency=low

  * Output possible result lines on help output.